--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,3 +9,12 @@ canvas{
 div{
     margin: 0;
 }
+#linktree{
+    position: absolute;
+    top:0px;
+    left:50%;
+    z-index: 1000;
+    background-color: white;
+    width:100px;
+    
+}
