Fixing two cameras WIP

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,3 +18,13 @@ div{
     width:100px;
     
 }
+
+#info {
+    position: absolute;
+    right:0;
+    bottom:0;
+    font-family: sans-serif;
+    font-size: 24px;
+    color: white;
+    margin: 8px;
+}
